--- a/GestioneCorsi/WebContent/WEB-INF/web.xml
+++ b/GestioneCorsi/WebContent/WEB-INF/web.xml
@@ -9,4 +9,15 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+
+<error-page>
+  <exception-type>java.lang.Throwable</exception-type>
+  <location>/error.jsp</location>
+  </error-page>
+  
+  <error-page>
+  <error-code>404</error-code>
+  <location>/error404.jsp</location>
+  </error-page>
+
 </web-app>
